-a few performance tweaks -fix socket error handling
git-svn-id: http://svn.code.sf.net/p/azsmrc/code/mldht/trunk@1792 58cabe8c-710f-0410-8395-bf4839b10e17